correct links to nats java doc
closes #287

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ developers=Joachim Grimm
 githubCoreBranch=4.0.x
 bomProperty=micronautNatsIoVersion
 apimicronaut=https://docs.micronaut.io/latest/api/io/micronaut/
-apinats=https://javadoc.io/doc/io.nats/jnats/
+apinats=https://javadoc.io/doc/io.nats/jnats/latest
 testnats=nats/src/test/groovy/io/micronaut/nats/docs
 org.gradle.caching=true
 org.gradle.jvmargs=-Xmx1g
