Completable return type on @NatsClient results in request-reply
Instead of making a rpc call, just send a normal message.

closes #260

--- a/nats/build.gradle
+++ b/nats/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
     testImplementation libs.testcontainers.spock
     testImplementation mn.micronaut.management
+    testImplementation libs.micronaut.rxjava3
     testImplementation mnTest.micronaut.test.spock
 }
 
