--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ nats = '2.16.6'
 micronaut-micrometer = "4.7.1" # TODO update once 5.0.0-SNAPSHOT is out
 micronaut-reactor = "3.0.0-SNAPSHOT"
 micronaut-serde = "2.0.0-SNAPSHOT"
+micronaut-rxjava3 = "3.0.0-SNAPSHOT"
 
 [libraries]
 jnats = { module = 'io.nats:jnats', version.ref = 'nats'}
@@ -27,6 +28,7 @@ testcontainers-spock = { module = 'org.testcontainers:spock', version.ref = 'tes
 micronaut-micrometer = { module = "io.micronaut.micrometer:micronaut-micrometer-bom", version.ref = "micronaut-micrometer" }
 micronaut-reactor = { module = 'io.micronaut.reactor:micronaut-reactor-bom', version.ref = "micronaut-reactor" }
 micronaut-serde = { module = "io.micronaut.serde:micronaut-serde-bom", version.ref = "micronaut-serde" }
+micronaut-rxjava3 = { module = 'io.micronaut.rxjava3:micronaut-rxjava3', version.ref = "micronaut-rxjava3"}
 
 [plugins]
 kotlin-jvm = { id = 'org.jetbrains.kotlin.jvm', version.ref = 'kotlin' }
