--- a/docs-examples/example-groovy/build.gradle
+++ b/docs-examples/example-groovy/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation projects.nats
+    testImplementation projects.micronautNats
 
     testCompileOnly mn.micronaut.inject.groovy
     testImplementation libs.testcontainers.spock
