--- a/docs-examples/example-java/build.gradle
+++ b/docs-examples/example-java/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 dependencies {
-    testImplementation projects.nats
+    testImplementation projects.micronautNats
 
     testAnnotationProcessor mn.micronaut.inject.java
 
