--- a/docs-examples/example-kotlin/build.gradle
+++ b/docs-examples/example-kotlin/build.gradle
@@ -7,7 +7,7 @@ plugins {
 dependencies {
     kaptTest(mn.micronaut.inject.java)
 
-    testImplementation projects.nats
+    testImplementation projects.micronautNats
     testImplementation mnTest.micronaut.test.kotest5
     testImplementation libs.testcontainers
     testImplementation mn.reactor
