--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-micronaut = '4.0.0-SNAPSHOT'
+micronaut = '4.0.0-M1'
 micronaut-docs = '2.0.0'
-micronaut-test = '4.0.0-SNAPSHOT'
-groovy = "4.0.6"
+micronaut-test = '4.0.0-M1'
+groovy = "4.0.10"
 spock = "2.3-groovy-4.0"
 
 awaitility = '4.2.0'
@@ -11,10 +11,10 @@ kotlin = '1.8.10'
 testcontainers = '1.17.6'
 nats = '2.16.9'
 
-micronaut-micrometer = "5.0.0-SNAPSHOT"
-micronaut-reactor = "3.0.0-SNAPSHOT"
-micronaut-serde = "2.0.0-SNAPSHOT"
-micronaut-rxjava3 = "3.0.0-SNAPSHOT"
+micronaut-micrometer = "5.0.0-M1"
+micronaut-reactor = "3.0.0-M1"
+micronaut-serde = "2.0.0-M1"
+micronaut-rxjava3 = "3.0.0-M1"
 
 [libraries]
 jnats = { module = 'io.nats:jnats', version.ref = 'nats'}
