--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.nats-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.nats-base.gradle
@@ -1,15 +1,19 @@
+plugins {
+    id 'java'
+}
+
 repositories {
     mavenCentral()
-    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }}
+
+dependencies {
+    testRuntimeOnly mn.logback.classic
 }
 
-configurations.all {
-    resolutionStrategy.dependencySubstitution {
-        substitute(module("org.codehaus.groovy:groovy"))
-                .using(module("org.apache.groovy:groovy:${libs.versions.groovy.get()}"))
-    }
-}
+test {
+    useJUnitPlatform()
 
-tasks.withType(GroovyCompile).configureEach {
-    options.forkOptions.jvmArgs << '-Dspock.iKnowWhatImDoing.disableGroovyVersionCheck=true'
+    jvmArgs '-Duser.country=US'
+    jvmArgs '-Duser.language=en'
+    failFast = true
 }
