--- a/docs-examples/example-java/build.gradle
+++ b/docs-examples/example-java/build.gradle
@@ -1,32 +1,3 @@
 plugins {
-    id "java-library"
-    id 'io.micronaut.build.internal.nats-tests'
-}
-
-dependencies {
-    testImplementation projects.micronautNats
-
-    testAnnotationProcessor mn.micronaut.inject.java
-
-    testImplementation mn.reactor
-    testImplementation libs.awaitility
-    testImplementation libs.testcontainers
-    testImplementation libs.junit.jupiter.api
-    testRuntimeOnly libs.junit.jupiter.engine
-    testRuntimeOnly mn.snakeyaml
-}
-
-compileJava.options.compilerArgs += '-parameters'
-compileTestJava.options.compilerArgs += '-parameters'
-
-java {
-    sourceCompatibility = JavaVersion.toVersion("17")
-    targetCompatibility = JavaVersion.toVersion("17")
-}
-test {
-    useJUnitPlatform()
-
-    jvmArgs '-Duser.country=US'
-    jvmArgs '-Duser.language=en'
-    failFast = true
+    id 'io.micronaut.build.internal.nats-native-tests'
 }
