--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,16 @@
 [versions]
-micronaut = '4.0.0-M1'
+micronaut = '4.0.0-M2'
+micronaut-platform = '4.0.0-M1'
 micronaut-docs = '2.0.0'
 micronaut-test = '4.0.0-M1'
+micronaut-gradle-plugin = "4.0.0-M1"
 groovy = "4.0.10"
 spock = "2.3-groovy-4.0"
 
 awaitility = '4.2.0'
 junit = '5.9.2'
 kotlin = '1.8.20'
-testcontainers = '1.17.6'
+testcontainers = '1.18.0'
 nats = '2.16.9'
 
 micronaut-micrometer = "5.0.0-M1"
@@ -29,6 +31,11 @@ micronaut-micrometer = { module = "io.micronaut.micrometer:micronaut-micrometer-
 micronaut-reactor = { module = 'io.micronaut.reactor:micronaut-reactor-bom', version.ref = "micronaut-reactor" }
 micronaut-serde = { module = "io.micronaut.serde:micronaut-serde-bom", version.ref = "micronaut-serde" }
 micronaut-rxjava3 = { module = 'io.micronaut.rxjava3:micronaut-rxjava3', version.ref = "micronaut-rxjava3"}
+
+gradle-micronaut = { module = "io.micronaut.gradle:micronaut-gradle-plugin", version.ref = "micronaut-gradle-plugin" }
+gradle-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+gradle-kotlin-allopen = { module = "org.jetbrains.kotlin:kotlin-allopen", version.ref = "kotlin" }
+gradle-kotlin-noarg = { module = "org.jetbrains.kotlin:kotlin-noarg", version.ref = "kotlin" }
 
 [plugins]
 kotlin-jvm = { id = 'org.jetbrains.kotlin.jvm', version.ref = 'kotlin' }
