--- a/nats/src/main/resources/META-INF/native-image/io/micronaut/nats/native-image.properties
+++ b/nats/src/main/resources/META-INF/native-image/io/micronaut/nats/native-image.properties
@@ -1,2 +1,2 @@
-Args = --initialize-at-build-time=io.nats.client.impl.NatsConnection \
+Args = --initialize-at-build-time=io.nats.client.impl.NatsConnection,io.nats.client.impl.ProtocolMessage,io.nats.client.support.NatsConstants,io.nats.client.support.ByteArrayBuilder,io.nats.client.support.BuilderBase \
        --initialize-at-run-time=io.micronaut.nats.health.$NatsHealthIndicatorDefinition
