--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.nats-native-tests.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.nats-native-tests.gradle
@@ -1,13 +1,4 @@
 plugins {
     id 'io.micronaut.build.internal.nats-examples'
-    id 'org.graalvm.buildtools.native'
-}
-
-tasks.named("check") { task ->
-    def graal = ["jvmci.Compiler", "java.vendor.version", "java.vendor"].any {
-        System.getProperty(it)?.toLowerCase(Locale.ENGLISH)?.contains("graal")
-    }
-    if (graal) {
-        task.dependsOn("nativeTest")
-    }
+    id 'io.micronaut.application'
 }
