--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.nats-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.nats-base.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    testRuntimeOnly mn.logback.classic
+    testRuntimeOnly mnLogging.logback.classic
 }
 
 test {
