--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.nats-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.nats-base.gradle
@@ -4,10 +4,10 @@ plugins {
 
 repositories {
     mavenCentral()
-    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }}
+}
 
 dependencies {
-    testRuntimeOnly mn.logback.classic
+    testRuntimeOnly mnLogging.logback.classic
 }
 
 test {
