--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-micronaut = '4.0.0-M2'
-micronaut-platform = '4.0.0-M1'
-micronaut-docs = '2.0.0'
-micronaut-test = '4.0.0-M2'
-micronaut-gradle-plugin = "4.0.0-M1"
-groovy = "4.0.10"
+micronaut = "4.0.0-M5"
+micronaut-platform = "4.0.0-M1"
+micronaut-docs = "2.0.0"
+micronaut-test = "4.0.0-M4"
+micronaut-gradle-plugin = "4.0.0-M4"
+groovy = "4.0.12"
 spock = "2.3-groovy-4.0"
 
 awaitility = '4.2.0'
@@ -14,11 +14,13 @@ testcontainers = '1.18.1'
 nats = '2.16.11'
 
 micronaut-micrometer = "5.0.0-M1"
-micronaut-reactor = "3.0.0-M1"
-micronaut-serde = "2.0.0-M3"
+micronaut-reactor = "3.0.0-M2"
+micronaut-serde = "2.0.0-M8"
 micronaut-rxjava3 = "3.0.0-M1"
 
+micronaut-logging = "1.0.0-M2"
 [libraries]
+micronaut-logging = { module = "io.micronaut.logging:micronaut-logging-bom", version.ref = "micronaut-logging" }
 # Core
 micronaut-core = { module = 'io.micronaut:micronaut-core-bom', version.ref = 'micronaut' }
 
