--- a/docs-examples/example-java/build.gradle
+++ b/docs-examples/example-java/build.gradle
@@ -1,3 +1,7 @@
 plugins {
     id 'io.micronaut.build.internal.nats-native-tests'
 }
+
+dependencies {
+    implementation projects.micronautNats
+}
