--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,15 +10,15 @@ spock = "2.3-groovy-4.0"
 awaitility = '4.2.0'
 junit = '5.10.1'
 kotlin = '1.9.22'
-testcontainers = '1.19.3'
 nats = '2.17.2'
 
+micronaut-logging = "1.2.2"
 micronaut-micrometer = "5.3.0"
 micronaut-reactor = "3.2.1"
-micronaut-serde = "2.7.1"
 micronaut-rxjava3 = "3.2.0"
+micronaut-serde = "2.7.1"
+micronaut-test-resources="2.3.2"
 
-micronaut-logging = "1.2.2"
 [libraries]
 micronaut-logging = { module = "io.micronaut.logging:micronaut-logging-bom", version.ref = "micronaut-logging" }
 # Core
@@ -29,13 +29,12 @@ awaitility = { module = 'org.awaitility:awaitility', version.ref = 'awaitility' 
 
 junit-jupiter-api = { module = 'org.junit.jupiter:junit-jupiter-api', version.ref = 'junit' }
 junit-jupiter-engine = { module = 'org.junit.jupiter:junit-jupiter-engine', version.ref = 'junit' }
-testcontainers = { module = 'org.testcontainers:testcontainers', version.ref = 'testcontainers' }
-testcontainers-spock = { module = 'org.testcontainers:spock', version.ref = 'testcontainers' }
 
 micronaut-micrometer = { module = "io.micronaut.micrometer:micronaut-micrometer-bom", version.ref = "micronaut-micrometer" }
 micronaut-reactor = { module = 'io.micronaut.reactor:micronaut-reactor-bom', version.ref = "micronaut-reactor" }
-micronaut-serde = { module = "io.micronaut.serde:micronaut-serde-bom", version.ref = "micronaut-serde" }
 micronaut-rxjava3 = { module = 'io.micronaut.rxjava3:micronaut-rxjava3', version.ref = "micronaut-rxjava3"}
+micronaut-serde = { module = "io.micronaut.serde:micronaut-serde-bom", version.ref = "micronaut-serde" }
+micronaut-test-resources = { module = "io.micronaut.testresources:micronaut-test-resources-bom", version.ref = "micronaut-test-resources" }
 
 gradle-micronaut = { module = "io.micronaut.gradle:micronaut-gradle-plugin", version.ref = "micronaut-gradle-plugin" }
 gradle-kotlin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
