--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 micronaut = "4.6.1"
-micronaut-platform = "4.0.0-RC1"
+micronaut-platform = "4.5.1"
 micronaut-docs = "2.0.0"
-micronaut-test = "4.0.0"
+micronaut-test = "4.5.0"
 micronaut-gradle-plugin = "4.4.2"
 groovy = "4.0.18"
 spock = "2.3-groovy-4.0"
